k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
spec:
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: javiplx/flaskapp
