k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskapp
spec:
  rules:
  - host: flaskapp.localdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskapp
            port:
              number: 80
